Updates from Overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -62,3 +62,12 @@ url={https://doi.org/10.1007/BF00702605}
   address   = "USA"
 }
 
+@book{principleOfLasersOrazio,
+  title={Principles of Lasers},
+  author={Svelto, O.},
+  isbn={9781441913029},
+  lccn={2009940423},
+  url={https://books.google.com.sg/books?id=ioywRI5W2HEC},
+  year={2010},
+  publisher={Springer US}
+}
